# lora-wan-pr

./: .dockerignore  .env.lpwanmapper.local.example  .env.template  .env.test  .gitattributes  .gitignore  .importlinter  BUSINESS_ANALYSIS.md  DEPLOY.md  README.md  docker-compose.yml  openapi.yaml  package-lock.json  package.json  pyproject.toml  request.json  setup.bat  setup.sh  start-demo.bat
.heatmap-snapshot-before-rebuild/: manifest.json  (+1 more)
archive/stage2-lightgbm/: Dockerfile  README.md  pyproject.toml
archive/stage2-lightgbm/artifacts/stage2/stage2-20260517T093146Z/: meta.json  model.lgb
archive/stage2-lightgbm/evaluation/: __init__.py  generate_report.py
archive/stage2-lightgbm/evaluation/plots/: interpretation.py  regression.py
archive/stage2-lightgbm/scripts/: README.md  eval_stage2_holdout.py  retrain_and_report.py
archive/stage2-lightgbm/src/lora_ml_predict/: __init__.py  config.py
archive/stage2-lightgbm/src/lora_ml_predict/features/: README.md  dem.py  osm.py
archive/stage2-lightgbm/src/lora_ml_predict/serving/: server.py
archive/stage2-lightgbm/src/lora_ml_predict/training/: README.md  __init__.py  data.py  drift.py  guardrail.py  registry_writer.py  retrain.py  spatial_cv.py  stage1_recal.py
services/api-service/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/api-service/src/lora_coverage_api/: __init__.py  celery_app.py  config.py  main.py
services/api-service/src/lora_coverage_api/application/: __init__.py  address_service.py  chirpstack_adapter.py  chirpstack_webhook_service.py  coordinate_parser.py  coverage_service.py  errors.py  path_loss.py  prediction_service.py  repositories.py  stage2.py  survey_service.py  webhook_auth.py
services/api-service/src/lora_coverage_api/application/bias/: __init__.py  distance_binned.py
services/api-service/src/lora_coverage_api/application/gateway_state/: __init__.py  service.py
services/api-service/src/lora_coverage_api/application/identity/: __init__.py  _mailer.py  _passwords.py  _refresh.py  _reset.py  _tokens.py  _verify.py  errors.py  service.py
services/api-service/src/lora_coverage_api/application/itu/: __init__.py  backend.py  model.py
services/api-service/src/lora_coverage_api/application/linking/: __init__.py  _crypto.py  errors.py  service.py
services/api-service/src/lora_coverage_api/application/sources/: __init__.py  base.py  errors.py  registry.py
services/api-service/src/lora_coverage_api/domain/: __init__.py  address.py  coverage.py  errors.py  lora_regions.py  result.py  survey.py
services/api-service/src/lora_coverage_api/edge/: __init__.py  app.py  deps.py  errors.py  filters.py  metrics.py  middleware.py  rate_limit.py  schemas.py
services/api-service/src/lora_coverage_api/infrastructure/: __init__.py  address_cache_pg.py  db.py  device_repository_pg.py  gateway_directory_pg.py  goong_client.py  nominatim_client.py  smtp_mailer.py  stage2_client.py  survey_repository_pg.py  vietmap_client.py
services/api-service/src/lora_coverage_api/scripts/: backfill_credential_fingerprints.py
services/api-service/src/lora_coverage_api/tasks/: __init__.py  rebuild_coverage.py  refresh_geo_data.py  retrain_ml.py
services/api-service/tests/: conftest.py  factories.py
services/api-service/tests/application/: test_address_service.py  test_chirpstack_adapter.py  test_chirpstack_webhook_service.py  test_coverage_service.py  test_survey_service.py
services/api-service/tests/domain/: test_coverage_invariants.py  test_survey_invariants.py
services/api-service/tests/fakes/: __init__.py  address.py  data_source.py  gateway_directory.py  path_loss.py  survey_ingest.py
services/api-service/tests/integration/: test_admin_pipeline_invariants.py  test_predict_endpoint.py
services/api-service/tests/unit/: test_address.py  test_lpwanmapper_mapping.py  test_metrics.py  test_path_loss.py  test_result_type.py  test_sources.py  test_webhook_token.py
services/ml-service/: Dockerfile  README.md  pyproject.toml
services/ml-service/coverage_predictor/: README.md  feature_builder.py  neighbor_features.py  predictor.py  terrain.py
services/ml-service/coverage_predictor/data/: gateways.csv  reference_points.csv
services/ml-service/data/: dummy_model.txt  gateway_table.candidate.csv  gateway_table.csv  model_meta.candidate.json  stage2_xgb.joblib  terrain_fallback.candidate.json  terrain_fallback.json  train_metrics.candidate.json  train_metrics.json  val_metrics.candidate.json  val_metrics.json
services/ml-service/data/dem/: README.md
services/ml-service/data/training/processed/: devices_history_1.csv  train_split_stats.json
services/ml-service/data/training/terrain/: dem.tif
services/ml-service/reference_wireless/: README.md  requirements.txt
services/ml-service/reference_wireless/data/processed/: devices_history_2.csv  reference_points.csv  train_split_stats.json
services/ml-service/reference_wireless/data/raw/: devices_latest.csv
services/ml-service/reference_wireless/data/terrain/: dem2.tif  landuse2.geojson
services/ml-service/reference_wireless/src/: build_gateways_dataset.py  build_reference_dataset.py  download_osm.py  main.py
services/ml-service/reference_wireless/src/api/: client.py  fetch_data.py
services/ml-service/reference_wireless/src/ml/: pipeline.py  predict.py  train.py
services/ml-service/reference_wireless/src/processing/: cleaning.py  features.py  parser.py  terrain.py
services/ml-service/scripts/: train_extra_trees.py
services/ml-service/src/lora_coverage_ml/: router.py
services/ml-service/src/lora_coverage_ml/calibration/: __init__.py  ece_monitor.py
services/ml-service/src/lora_coverage_ml/pipeline/: __init__.py  raster_features.py
services/ml-service/src/lora_coverage_ml/stages/: stage1_empirical.py  stage2_lightgbm.py
services/ml-service/src/lora_ml_predict/: app.py  predictor.py  train.py
services/ml-service/src/lora_ml_predict/processing/: __init__.py  dem_lookup.py  features.py  terrain.py
services/worker-service/: README.md  pyproject.toml
services/worker-service/src/lora_coverage_worker/: __init__.py
(+724 files in other folders)
