[project]
name = "lora-coverage"
version = "0.1.0"
description = "LoRa Coverage Mapping Platform — Python workspace root (uv)"
requires-python = ">=3.12,<3.13"

# Dependencies are declared per-service in services/*/pyproject.toml.
# Root only carries dev-tooling shared across services.
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "import-linter>=2.1",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "python-dotenv>=1.2.2",
]

[tool.uv.workspace]
members = [
    "services/api-service",
    "services/ml-service",
    "services/worker-service",
    "packages/sdk-python",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["legacy", "migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PTH", "RUF"]
ignore = ["E501"]  # line-length handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["legacy/", "migrations/versions/"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["services/api-service/tests", "services/ml-service/tests"]
addopts = "-ra --strict-markers --strict-config"
