[project]
name = "lora-coverage"
version = "0.1.0"
description = "LoRa Coverage Mapping Platform — Python workspace root (uv)"
requires-python = ">=3.12,<3.13"

# Dependencies are declared per-service in services/*/pyproject.toml.
# Root only carries dev-tooling shared across services.
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "import-linter>=2.1",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "python-dotenv>=1.2.2",
    "types-python-jose>=3.5.0.20260408",
]

[tool.uv.workspace]
members = [
    "services/api-service",
    "services/ml-service-hmap",
    "services/ml-service-predict",
    "services/worker-service",
    "packages/sdk-python",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["legacy", "migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PTH", "RUF"]
ignore = ["E501", "RUF001", "RUF003",]  # line-length handled by formatter
[tool.ruff.lint.per-file-ignores]
# FastAPI Depends() trong default argument là pattern chính thức của framework
"services/api-service/src/lora_coverage_api/edge/routers/*.py" = ["B008"]
"services/ml-service-predict/src/lora_ml_predict/serving/*.py" = ["B008"]
# conftest phải load_dotenv() trước khi import modules đọc env vars
"services/api-service/tests/conftest.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["legacy/", "migrations/versions/"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
# 3rd-party packages thiếu type stub. ML service phụ thuộc nặng — không cần
# fail strict mypy vì lib upstream.
module = ["rasterio", "rasterio.*", "sklearn", "sklearn.*", "pandas", "lightgbm", "optuna", "optuna.*", "joblib", "osmium", "shapely", "shapely.*", "scipy", "scipy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "services/api-service/tests",
    "services/ml-service-hmap/tests",
    "services/ml-service-predict/tests",
]
addopts = "-ra --strict-markers --strict-config"
