[project]
name = "lora-coverage"
version = "0.1.0"
description = "LoRa Coverage Mapping Platform — Python workspace root (uv)"
requires-python = ">=3.12,<3.13"

# Dependencies are declared per-service in services/*/pyproject.toml.
# Root only carries dev-tooling shared across services.
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "import-linter>=2.1",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "python-dotenv>=1.2.2",
    "types-python-jose>=3.5.0.20260408",
]

[tool.uv.workspace]
members = [
    "services/api-service",
    "services/worker-service",
    "services/ml-service",
    "packages/sdk-python",
]
# Legacy LightGBM (cá nhân tự build trước handoff) → archive/stage2-lightgbm/
# (KHÔNG là workspace member; pyproject chỉ giữ làm reference, không runnable).

[tool.uv]
# Target deployment: Windows dev + Linux x86_64 container. macOS/arm64 không
# được hỗ trợ vì crc-covlib (Stage 1 ITU backend) không có wheel/build cho darwin.
# Giới hạn resolver ở 2 môi trường thực tế → tránh "No solution found" cho splits
# vô nghĩa khi `uv lock` resolve toàn universe.
environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    "legacy",
    "migrations/versions",
    "archive",
    "services/ml-service/reference_wireless",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PTH", "RUF"]
ignore = ["E501", "RUF001", "RUF003",]  # line-length handled by formatter
# Math/physics docstrings dùng σ, ², ·, → xuyên project (path-loss, RSSI, link budget).
allowed-confusables = ["σ", "²", "·", "→", "×"]
[tool.ruff.lint.per-file-ignores]
# FastAPI Depends() trong default argument là pattern chính thức của framework
"services/api-service/src/lora_coverage_api/edge/routers/*.py" = ["B008"]
# conftest phải load_dotenv() trước khi import modules đọc env vars
"services/api-service/tests/conftest.py" = ["E402"]
# Experiment scripts dùng ML convention: X/Y là feature matrix / label;
# Xtr/Xte/Xv = train/test/val splits — uppercase chuẩn ngành, không snake_case.
"scripts/experiments/*.py" = ["N803", "N806"]
"scripts/train_extra_trees.py" = ["N803", "N806"]
"scripts/eval_extra_trees.py" = ["N803", "N806"]
"scripts/eval_extra_trees_holdout.py" = ["N803", "N806"]
"scripts/test_predictor.py" = ["N803", "N806"]
# Surgical port từ reference_wireless: giữ R = Earth radius (physics convention).
"services/ml-service/src/lora_ml_predict/processing/features.py" = ["N806"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["legacy/", "migrations/versions/"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
# 3rd-party packages thiếu type stub. ML service phụ thuộc nặng — không cần
# fail strict mypy vì lib upstream.
# chirpstack_api + google.protobuf: stubs (types-protobuf) cover phần protobuf
# nhưng chirpstack_api generated protobuf không có py.typed — coverage cục bộ,
# bỏ qua cho đỡ noise.
module = ["rasterio", "rasterio.*", "sklearn", "sklearn.*", "pandas", "lightgbm", "optuna", "optuna.*", "joblib", "osmium", "shapely", "shapely.*", "scipy", "scipy.*", "chirpstack_api", "chirpstack_api.*", "google.protobuf", "google.protobuf.*", "sentry_sdk", "sentry_sdk.*", "celery", "celery.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "services/api-service/tests",
]
# `integration` test cần DB sống + tốn nhiều phút (vd. rebuild pipeline ~17min).
# Default skip để `uv run pytest` ở root pre-push chạy nhanh; opt-in qua
# `uv run pytest -m integration` khi muốn chạy thật.
addopts = "-ra --strict-markers --strict-config -m 'not integration'"
markers = [
    "integration: yêu cầu DATABASE_URL trỏ tới DB sống + migrations đã apply; skip default",
]
