[project]
name = "lora-coverage-api"
version = "0.1.0"
description = "LoRa Coverage Platform — REST API service (FastAPI)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "geoalchemy2>=0.16",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "structlog>=24.4",
    "slowapi>=0.1.9",
    "orjson>=3.10",
    "prometheus-client>=0.21",
    "httpx>=0.27",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.2",
    # Stage 1 path-loss = ITU-R P.1812-7 + P.2108-1 (CRC Canada, MIT).
    # KHÔNG có trên PyPI — wheel vendored ở repo root `vendor/` (chỉ Windows DLL).
    # Linux: Dockerfile build từ source qua cmake (xem services/api-service/Dockerfile).
    "crc-covlib==4.6.2",
    # crc_covlib.helper.itur_p2109 (Building Entry Loss) import numpy ở top
    # module — không khai báo trong setup.py của lib nên cần thêm tay. P.2108
    # không cần. Khi BEL bị strip thì indoor predict crash với ImportError.
    "numpy>=1.26",
    # scikit-image dùng cho `scripts/precompute_minsf.py` — marching squares
    # (find_contours) convert min-SF grid → GeoJSON polygon bands. Chỉ chạy
    # offline (CLI precompute), không touch runtime API. Đặt ở api-service vì
    # script reuse Stage1ItuModel + CrcCovlibBackend.
    "scikit-image>=0.24",
]

[tool.uv.sources]
# Wheel vendored — chỉ chứa Windows DLL. Trên Linux/Docker, wheel này install ok
# nhưng `import crc_covlib.simulation` sẽ fail thiếu .so → Dockerfile build từ
# source thay vì pip install qua wheel này.
crc-covlib = { path = "../../vendor/crc_covlib-4.6.2-py3-none-any.whl" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lora_coverage_api"]

[tool.ruff]
extend = "../../pyproject.toml"

[tool.ruff.lint]
allowed-confusables = ["σ", "²", "·", "→"]
