[project]
name = "lora-coverage-api"
version = "1.0.0"
description = "LoRa Coverage Platform — REST API service (FastAPI)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    # FastAPI multipart/form-data parsing — required cho POST /me/uploads/csv
    # (UploadFile + Form). FastAPI báo ImportError lúc xử lý request nếu thiếu.
    "python-multipart>=0.0.9",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "geoalchemy2>=0.16",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "structlog>=24.4",
    "slowapi>=0.1.9",
    # Centralized rate-limit counter store (Chapter 4 §Architecture). slowapi
    # delegate xuống `limits` library; `limits` cần `redis` extra cho
    # storage_uri="redis://..." (Valkey nói tiếng Redis cùng protocol RESP2/3).
    "redis>=5.0",
    "orjson>=3.10",
    "prometheus-client>=0.21",
    "httpx>=0.27",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.2",
    # Stage 1 path-loss = ITU-R P.1812-7 + P.2108-1 (CRC Canada, MIT).
    # KHÔNG có trên PyPI — wheel vendored ở repo root `vendor/` (chỉ Windows DLL).
    # Linux: Dockerfile build từ source qua cmake (xem services/api-service/Dockerfile).
    "crc-covlib==4.6.2",
    # crc_covlib.helper.itur_p2109 (Building Entry Loss) import numpy ở top
    # module — không khai báo trong setup.py của lib nên cần thêm tay. P.2108
    # không cần. Khi BEL bị strip thì indoor predict crash với ImportError.
    "numpy>=1.26",
    # shapely cho `scripts/precompute_rssi_heatmap.py` — ocean polygon mask
    # (Đà Nẵng bbox − mainland − Sơn Trà) để clip cell biển ra khỏi composite
    # RSSI heatmap. Cũng dùng bởi scripts/build_dsm.py + build_training_csv.py.
    "shapely>=2.0",
    # Stage 2 XGBoost residual model — dùng bởi `scripts/precompute_rssi_heatmap.py`
    # offline (composite RSSI heatmap). Joblib load model ở worker process,
    # xgboost.Booster predict trên feature DataFrame (pandas). Trước đây phải
    # bootstrap pip + pip install thủ công trong container sau mỗi rebuild
    # (gotcha trong project_ml_deferred.md); thêm declare ở đây để uv tự install.
    "joblib>=1.3",
    "xgboost>=2.0",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    # ChirpStack v4 không có REST API built-in. Public deployments thường
    # chỉ expose gRPC-web (qua nginx, port 443) — không có sidecar
    # chirpstack-rest-api. Adapter ChirpStack giao tiếp qua gRPC-web frame
    # (5-byte length-prefix) + protobuf message types từ package này.
    "chirpstack-api>=4.10",
    # Error tracking — env-gated qua SENTRY_DSN. Khi DSN rỗng (dev), init no-op
    # nên không phát sinh traffic. Pre-deploy checklist §8 (logging+monitoring).
    "sentry-sdk[fastapi]>=2.18",
    # Celery broker + result backend cho admin "Rebuild bản đồ ước lượng" task.
    # Heavy job (precompute_rssi_heatmap.py mất vài phút) → async qua celery-worker
    # service. Dùng Valkey hiện có (redis-compatible) làm broker + backend.
    "celery[redis]>=5.4",
    # scripts/precompute_rssi_heatmap.py dùng rasterio cho 2 mục đích:
    #   - sea mask DEM read (_build_sea_mask_dem)
    #   - polygonize binary mask → GeoJSON (_polygonize_mask, rasterio.features.shapes)
    # Trước đây script được chạy từ ml-service container (có rasterio); sau khi
    # admin trigger rebuild qua Celery worker (image api-service), cần thêm vào
    # đây để worker subprocess không crash.
    "rasterio>=1.4",
    # geopandas + matplotlib: scripts/eval_extra_trees_holdout.py + render_report
    # vẽ scatter / per-bin charts cho báo cáo huấn luyện. matplotlib backend mặc
    # định 'Agg' (no display) — không cần system Qt/Tk.
    "geopandas>=1.0",
    "matplotlib>=3.9",
    # ML retrain report: Jinja2 template render summary.html, WeasyPrint convert
    # → PDF tải về. Runtime deps (libpango, libcairo, libgdk-pixbuf) khai báo
    # trong services/api-service/Dockerfile.
    "jinja2>=3.1",
    "weasyprint>=63.0",
    "osmium>=4.3.1",
    # scripts/build_training_csv.py dùng H3 (Uber) để phân tầng dữ liệu retrain
    # theo ô lưới lục giác res 8 + buffer 1-ring → chống rò rỉ không gian giữa
    # tập huấn luyện / xác thực / kiểm thử. Celery worker chạy subprocess bằng
    # venv api-service nên dependency phải khai báo ở đây.
    "h3>=4.0",
]

[tool.uv.sources]
# Wheel vendored — chỉ chứa Windows DLL. Trên Linux/Docker, wheel này install ok
# nhưng `import crc_covlib.simulation` sẽ fail thiếu .so → Dockerfile build từ
# source thay vì pip install qua wheel này.
crc-covlib = { path = "../../vendor/crc_covlib-4.6.2-py3-none-any.whl" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lora_coverage_api"]

[tool.ruff]
extend = "../../pyproject.toml"

[tool.ruff.lint]
allowed-confusables = ["σ", "²", "·", "→"]
