[project]
name = "lora-coverage-ml"
version = "0.0.0"
description = "ML inference service for LoRa coverage prediction (Stage 1-4)."
requires-python = ">=3.12"
readme = "README.md"

# SKELETON — chưa pin version. Khi build thật, thêm:
#   fastapi, uvicorn[standard], onnxruntime, numpy, scipy, pydantic-settings,
#   structlog. Stage 2+: lightgbm, pandas, rasterio. Stage 3+: torch.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.7",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lora_coverage_ml"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
strict = true
python_version = "3.12"
