[project]
name = "lora-ml-predict"
version = "1.0.0"
description = "LoRa coverage ML prediction service (Stage 2)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "joblib>=1.4",
    "pandas>=2.2",
    "xgboost>=2.1",
    "scikit-learn>=1.5",
    "rasterio>=1.4",
    "geopandas>=1.0",
    "shapely>=2.0",
    "lora-coverage-api",
]

[project.scripts]
ml-service = "lora_ml_predict.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lora_ml_predict"]

[tool.uv.sources]
lora-coverage-api = { workspace = true }
lora-coverage-worker = { workspace = true }
lora-coverage-sdk = { workspace = true }
