[project]
name = "lora-coverage-worker"
version = "0.0.0"
description = "Async worker (Celery) — placeholder, chưa implement (defer sang v3)."
requires-python = ">=3.12,<3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lora_coverage_worker"]
